force-app/main/default/objects/Contact/fields/AgeToday__c.field-meta.xml
<CustomField>
    <fullName>AgeToday__c</fullName>
    <formula>IF(YEAR(Birthdate)=YEAR(TODAY()), &quot;1 Years&quot;,
IF(VALUE(YearOfBirth__c)=YEAR(TODAY()), &quot;1 Years&quot;,
IF(MONTH(Birthdate)&gt;= MONTH(TODAY()),TEXT(YEAR(TODAY()) - YEAR(Birthdate) - 1) + &quot; Years&quot;,
IF(MONTH(Birthdate)&lt; MONTH(TODAY()), TEXT(YEAR(TODAY()) - YEAR(Birthdate)) + &quot; Years&quot;,
IF(AND((VALUE(Birthday_Month__c) &lt; MONTH(TODAY())),(VALUE(Birthday_Date__c) &lt; DAY(TODAY()))), TEXT(YEAR(TODAY()) - VALUE(YearOfBirth__c)) + &quot; Years&quot;, TEXT(YEAR(TODAY()) - VALUE(YearOfBirth__c) - 1) + &quot; Years&quot;)))))</formula>
    <inlineHelpText>Account holder&apos;s age today in years, months and days. This will be calculated automatically via a formula based on the Contact&apos;s Date of Birth</inlineHelpText>
    <label>Age Today</label>
    <type>Text</type>
</CustomField>