force-app/main/default/objects/Contact/fields/AssociatedWealth_XDossier__c.field-meta.xml
<CustomField>
    <fullName>AssociatedWealth_XDossier__c</fullName>
    <label>Associated Wealth-X Dossier</label>
    <type>Url</type>
</CustomField>