force-app/main/default/objects/Contact/fields/Biography__c.field-meta.xml
<CustomField>
    <fullName>Biography__c</fullName>
    <inlineHelpText>Write something about the contact that is not yet known to us. Write a few sentences.</inlineHelpText>
    <label>Biography</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>