force-app/main/default/objects/Contact/fields/BiologicalFather__c.field-meta.xml
<CustomField>
    <fullName>BiologicalFather__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of Contact&apos;s Biological or Birth Father</inlineHelpText>
    <label>Biological Father</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Contacts (Biological Father)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>