force-app/main/default/objects/Contact/fields/BiologicalMother__c.field-meta.xml
<CustomField>
    <fullName>BiologicalMother__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of Contact&apos;s Biological or Birth Mother</inlineHelpText>
    <label>Biological Mother</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>