force-app/main/default/objects/Contact/fields/Birthday_Date__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Date__c</fullName>
    <description>Using this field Birthday Reminder</description>
    <formula>CASE(TEXT(  DayOfBirth__c ),
&apos;1&apos;, &apos;1&apos;,
&apos;2&apos;, &apos;2&apos;,
&apos;3&apos;, &apos;3&apos;,
&apos;4&apos;, &apos;4&apos;,
&apos;5&apos;, &apos;5&apos;,
&apos;6&apos;, &apos;6&apos;,
&apos;7&apos;,&apos;7&apos;,
&apos;8&apos;,&apos;8&apos;,
&apos;9&apos;,&apos;9&apos;,
&apos;10&apos;,&apos;10&apos;,
&apos;11&apos;,&apos;11&apos;,
&apos;12&apos;,&apos;12&apos;,
&apos;13&apos;,&apos;13&apos;,
&apos;14&apos;,&apos;14&apos;,
&apos;15&apos;,&apos;15&apos;,
&apos;16&apos;,&apos;16&apos;,
&apos;17&apos;,&apos;17&apos;,
&apos;18&apos;,&apos;18&apos;,
&apos;19&apos;,&apos;19&apos;,
&apos;20&apos;,&apos;20&apos;,
&apos;21&apos;,&apos;21&apos;,
&apos;22&apos;,&apos;22&apos;,
&apos;23&apos;,&apos;23&apos;,
&apos;24&apos;,&apos;24&apos;,
&apos;25&apos;,&apos;25&apos;,
&apos;26&apos;,&apos;26&apos;,
&apos;27&apos;,&apos;27&apos;,
&apos;28&apos;,&apos;28&apos;,
&apos;29&apos;,&apos;29&apos;,
&apos;30&apos;,&apos;30&apos;,
&apos;31&apos;,&apos;31&apos;,
&apos;&apos;
)</formula>
    <label>Birthday Date</label>
    <type>Text</type>
</CustomField>