force-app/main/default/objects/Contact/fields/Birthday_Month__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Month__c</fullName>
    <description>Using this field for Birthday Reminder</description>
    <formula>CASE(TEXT(  MonthOfBirth__c ),
&apos;January&apos;, &apos;1&apos;,
&apos;February&apos;, &apos;2&apos;,
&apos;March&apos;, &apos;3&apos;,
&apos;April&apos;, &apos;4&apos;,
&apos;May&apos;, &apos;5&apos;,
&apos;June&apos;, &apos;6&apos;,
&apos;July&apos;,&apos;7&apos;,
&apos;August&apos;,&apos;8&apos;,
&apos;September&apos;,&apos;9&apos;,
&apos;October&apos;,&apos;10&apos;,
&apos;November&apos;,&apos;11&apos;,
&apos;December&apos;,&apos;12&apos;,
&apos;&apos;
)</formula>
    <label>Birthday Month</label>
    <type>Text</type>
</CustomField>