force-app/main/default/objects/Contact/fields/BusinessPhone__c.field-meta.xml
<CustomField>
    <fullName>BusinessPhone__c</fullName>
    <description>A business phone number used to connect with customers based on a local city, area, or state.</description>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>