force-app/main/default/objects/Contact/fields/CityOfBirth__c.field-meta.xml
<CustomField>
    <fullName>CityOfBirth__c</fullName>
    <inlineHelpText>City where the Contact was born</inlineHelpText>
    <label>City Of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>