force-app/main/default/objects/Contact/fields/Clarification__c.field-meta.xml
<CustomField>
    <fullName>Clarification__c</fullName>
    <inlineHelpText>Enter any clarification or any other additional information regarding this Contact.</inlineHelpText>
    <label>Clarification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>