force-app/main/default/objects/Contact/fields/ClubHouse__c.field-meta.xml
<CustomField>
    <fullName>ClubHouse__c</fullName>
    <inlineHelpText>Are the Contact a member of any Clubhouse, Mention its name here</inlineHelpText>
    <label>ClubHouse</label>
    <length>80</length>
    <type>Text</type>
</CustomField>