force-app/main/default/objects/Contact/fields/CommentsAverage__c.field-meta.xml
<CustomField>
    <fullName>CommentsAverage__c</fullName>
    <inlineHelpText>This field is to be updated with Airtable data.</inlineHelpText>
    <label>Comments Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>