force-app/main/default/objects/Contact/fields/CommunityInvolvementPhilanthropy__c.field-meta.xml
<CustomField>
    <fullName>CommunityInvolvementPhilanthropy__c</fullName>
    <inlineHelpText>Enter the details of any community work of Philanthrophy the Contact is involved in</inlineHelpText>
    <label>Community Involvement &amp; Philanthropy</label>
    <type>TextArea</type>
</CustomField>