force-app/main/default/objects/Contact/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <inlineHelpText>This field is to be updated with Airtable data.</inlineHelpText>
    <label>Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>