force-app/main/default/objects/Contact/fields/Connections__c.field-meta.xml
<CustomField>
    <fullName>Connections__c</fullName>
    <inlineHelpText>This field is to be updated with Airtable data.</inlineHelpText>
    <label>Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>