force-app/main/default/objects/Contact/fields/ConventionYear__c.field-meta.xml
<CustomField>
    <fullName>ConventionYear__c</fullName>
    <inlineHelpText>This field is a mapped field with Lead and will be automatically filled during Lead conversion process if the data is filled there. Fields values will be updated based on the mapped objects (Lead-Account) (Lead-Contact)</inlineHelpText>
    <label>Convention Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>