force-app/main/default/objects/Contact/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <inlineHelpText>Enter the country code where the phone is registered.</inlineHelpText>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+1</fullName>
                <label>+1 (US, Canada)</label>
            </value>
            <value>
                <fullName>+30</fullName>
                <label>+30 (Greece)</label>
            </value>
            <value>
                <fullName>+33</fullName>
                <label>+33 (France)</label>
            </value>
            <value>
                <fullName>+39</fullName>
                <label>+39 (Italy)</label>
            </value>
            <value>
                <fullName>+41</fullName>
                <label>+41 (Switzerland)</label>
            </value>
            <value>
                <fullName>+44</fullName>
                <label>+44 (United Kingdom)</label>
            </value>
            <value>
                <fullName>+61</fullName>
                <label>+61 (Australia)</label>
            </value>
            <value>
                <fullName>+62</fullName>
                <label>+62 (Indonesia)</label>
            </value>
            <value>
                <fullName>+65</fullName>
                <label>+65 (Singapore)</label>
            </value>
            <value>
                <fullName>+81</fullName>
                <label>+81 (Japan)</label>
            </value>
            <value>
                <fullName>+86</fullName>
                <label>+86 (China)</label>
            </value>
            <value>
                <fullName>+91</fullName>
                <label>+91 (India)</label>
            </value>
            <value>
                <fullName>+353</fullName>
                <label>+353 (Ireland)</label>
            </value>
            <value>
                <fullName>+971</fullName>
                <label>+971 (United Arab Emirates)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>