force-app/main/default/objects/Contact/fields/CountryOfBirth__c.field-meta.xml
<CustomField>
    <fullName>CountryOfBirth__c</fullName>
    <inlineHelpText>Country where the Contact was born</inlineHelpText>
    <label>Country Of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>