force-app/main/default/objects/Contact/fields/DateofBirth__c.field-meta.xml
<CustomField>
    <fullName>DateofBirth__c</fullName>
    <inlineHelpText>Contact&apos;s Date of birth</inlineHelpText>
    <label>Date of Birth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>