force-app/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>Select via picklist the department of this Contact</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C-Suite</fullName>
            </value>
            <value>
                <fullName>Research and development</fullName>
            </value>
            <value>
                <fullName>Accounting and Finance</fullName>
            </value>
            <value>
                <fullName>Human resources</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Administration and Operations</fullName>
            </value>
            <value>
                <fullName>Customer Service/Technical Support</fullName>
            </value>
            <value>
                <fullName>Marketing and Sales</fullName>
            </value>
            <value>
                <fullName>Public Relations and Purchasing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>