force-app/main/default/objects/Contact/fields/DescribetheHobbies__c.field-meta.xml
<CustomField>
    <fullName>DescribetheHobbies__c</fullName>
    <inlineHelpText>Write a few words to describe more about the Contact&apos;s Hobbies. Max 255 words.</inlineHelpText>
    <label>Describe the Hobbies</label>
    <length>31072</length>
    <type>LongTextArea</type>
</CustomField>