force-app/main/default/objects/Contact/fields/Discord__c.field-meta.xml
<CustomField>
    <fullName>Discord__c</fullName>
    <inlineHelpText>the Contact&apos;s Discord account URL and details</inlineHelpText>
    <label>Discord</label>
    <length>80</length>
    <type>Text</type>
</CustomField>