force-app/main/default/objects/Contact/fields/EmploymentHistory__c.field-meta.xml
<CustomField>
    <fullName>EmploymentHistory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the current Employment details</inlineHelpText>
    <label>Employment</label>
    <referenceTo>EmploymentHistory__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>