force-app/main/default/objects/Contact/fields/EngagementRateAverage__c.field-meta.xml
<CustomField>
    <fullName>EngagementRateAverage__c</fullName>
    <inlineHelpText>This field is to be updated with Airtable data.</inlineHelpText>
    <label>Engagement Rate Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>