force-app/main/default/objects/Contact/fields/EngagementsCount__c.field-meta.xml
<CustomField>
    <fullName>EngagementsCount__c</fullName>
    <inlineHelpText>This field is to be updated with Airtable data.</inlineHelpText>
    <label>Engagements Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>