force-app/main/default/objects/Contact/fields/Est_net_worthsourceURL__c.field-meta.xml
<CustomField>
    <fullName>Est_net_worthsourceURL__c</fullName>
    <label>Est. net worth source URL</label>
    <type>Url</type>
</CustomField>