force-app/main/default/objects/Contact/fields/Estnetworth__c.field-meta.xml
<CustomField>
    <fullName>Estnetworth__c</fullName>
    <inlineHelpText>An estimate of a contact net worth</inlineHelpText>
    <label>Est. net worth ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>