force-app/main/default/objects/Contact/fields/Estnetworthsource__c.field-meta.xml
<CustomField>
    <fullName>Estnetworthsource__c</fullName>
    <inlineHelpText>Source of a contact Est. net worth</inlineHelpText>
    <label>Est. net worth source</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>