force-app/main/default/objects/Contact/fields/EyeColour__c.field-meta.xml
<CustomField>
    <fullName>EyeColour__c</fullName>
    <inlineHelpText>What is the Contact&apos;s eye color? Select one from the picklis.</inlineHelpText>
    <label>Eye Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Hazel</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Violet</fullName>
            </value>
            <value>
                <fullName>Heterochromia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>