force-app/main/default/objects/Contact/fields/FaceBook__c.field-meta.xml
<CustomField>
    <fullName>FaceBook__c</fullName>
    <inlineHelpText>URL of the Contact&apos;s Facebook</inlineHelpText>
    <label>FaceBook</label>
    <length>80</length>
    <type>Text</type>
</CustomField>