force-app/main/default/objects/Contact/fields/FavoriteAuthor__c.field-meta.xml
<CustomField>
    <fullName>FavoriteAuthor__c</fullName>
    <inlineHelpText>Who is the Contact&apos;s Favorite Author</inlineHelpText>
    <label>Favorite Author</label>
    <length>50</length>
    <type>Text</type>
</CustomField>