force-app/main/default/objects/Contact/fields/FavoriteBook__c.field-meta.xml
<CustomField>
    <fullName>FavoriteBook__c</fullName>
    <inlineHelpText>What is the Contact&apos;s Favorite Book</inlineHelpText>
    <label>Favorite Book</label>
    <length>50</length>
    <type>Text</type>
</CustomField>