force-app/main/default/objects/Contact/fields/FavoriteCarModel__c.field-meta.xml
<CustomField>
    <fullName>FavoriteCarModel__c</fullName>
    <inlineHelpText>What is the Contact&apos;s Favorite Car</inlineHelpText>
    <label>Favorite Car Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>