force-app/main/default/objects/Contact/fields/FavoriteCelebraity__c.field-meta.xml
<CustomField>
    <fullName>FavoriteCelebraity__c</fullName>
    <inlineHelpText>Who is the Contact&apos;s Favorite Celebrity that the Contact Admire the most.</inlineHelpText>
    <label>Favorite Celebrity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>