force-app/main/default/objects/Contact/fields/FavoriteCity2__c.field-meta.xml
<CustomField>
    <fullName>FavoriteCity2__c</fullName>
    <inlineHelpText>Which city is the Contact&apos;s Second Favorite, Even if the Contact don&apos;t live there, Never Visited there.</inlineHelpText>
    <label>Favorite City 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>