force-app/main/default/objects/Contact/fields/FavoriteCity_1__c.field-meta.xml
<CustomField>
    <fullName>FavoriteCity_1__c</fullName>
    <inlineHelpText>Which city is the Contact&apos;s Favorite, Even if the Contact don&apos;t live there, Never Visited there.</inlineHelpText>
    <label>Favorite City 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>