force-app/main/default/objects/Contact/fields/FavoriteColor__c.field-meta.xml
<CustomField>
    <fullName>FavoriteColor__c</fullName>
    <inlineHelpText>What is the Contact&apos;s favorite Color.</inlineHelpText>
    <label>Favorite Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Violet</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Mauve</fullName>
            </value>
            <value>
                <fullName>Magenta</fullName>
            </value>
            <value>
                <fullName>Lilac</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>Lavender</fullName>
            </value>
            <value>
                <fullName>Indigo</fullName>
            </value>
            <value>
                <fullName>Sapphire</fullName>
            </value>
            <value>
                <fullName>Stone</fullName>
            </value>
            <value>
                <fullName>Teal</fullName>
            </value>
            <value>
                <fullName>Sky</fullName>
            </value>
            <value>
                <fullName>Peacock</fullName>
            </value>
            <value>
                <fullName>Cyan</fullName>
            </value>
            <value>
                <fullName>Aegean</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Baby Blue</fullName>
            </value>
            <value>
                <fullName>Persian Blue</fullName>
            </value>
            <value>
                <fullName>Ultramarine</fullName>
            </value>
            <value>
                <fullName>Midnight Blue</fullName>
            </value>
            <value>
                <fullName>Navy Blue</fullName>
            </value>
            <value>
                <fullName>Steel Blue</fullName>
            </value>
            <value>
                <fullName>Oxford Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Juniper</fullName>
            </value>
            <value>
                <fullName>Mint</fullName>
            </value>
            <value>
                <fullName>Emerald</fullName>
            </value>
            <value>
                <fullName>Lime</fullName>
            </value>
            <value>
                <fullName>Olive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>