force-app/main/default/objects/Contact/fields/FavoriteFood__c.field-meta.xml
<CustomField>
    <fullName>FavoriteFood__c</fullName>
    <inlineHelpText>What is the Contact&apos;s Favourite Food.</inlineHelpText>
    <label>Favorite Food</label>
    <length>100</length>
    <type>Text</type>
</CustomField>