force-app/main/default/objects/Contact/fields/FavoriteHolidayDestination__c.field-meta.xml
<CustomField>
    <fullName>FavoriteHolidayDestination__c</fullName>
    <inlineHelpText>Where would the contact like to go on a holiday again and again</inlineHelpText>
    <label>Favorite Holiday Destination</label>
    <length>10</length>
    <type>Text</type>
</CustomField>