force-app/main/default/objects/Contact/fields/FavoritePaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>FavoritePaymentMethod__c</fullName>
    <inlineHelpText>the Contact&apos;s Favorite Payment method, Card, cash, PayPal, Crypto or any other.</inlineHelpText>
    <label>Favorite Payment Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>