force-app/main/default/objects/Contact/fields/FavoritePlacetoEat__c.field-meta.xml
<CustomField>
    <fullName>FavoritePlacetoEat__c</fullName>
    <inlineHelpText>It can be a Restaurant, Nook, small shop or even the Contact&apos;s home!</inlineHelpText>
    <label>Favorite Place to Eat</label>
    <length>100</length>
    <type>Text</type>
</CustomField>