force-app/main/default/objects/Contact/fields/FavoritePreciousStone__c.field-meta.xml
<CustomField>
    <fullName>FavoritePreciousStone__c</fullName>
    <inlineHelpText>Emerald, Diamond, Ruby, Sapphire, Citrine are only a few to name. Tell us the stone the Contact find the most precious</inlineHelpText>
    <label>Favorite Precious Stone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>