force-app/main/default/objects/Contact/fields/FavoritePresident__c.field-meta.xml
<CustomField>
    <fullName>FavoritePresident__c</fullName>
    <inlineHelpText>Who is the President the Contact think is leading the Country in a good way as compared to others</inlineHelpText>
    <label>Favorite President</label>
    <length>100</length>
    <type>Text</type>
</CustomField>